src/assets/sass/page/_mp.scss
/////////////////////////////////////////////////////////以下為demo範例///
// 首頁區塊設定

// more按鈕
a.more {
  display: block;
  width: 10em;
  text-align: center;
  height: 2.5em;
  margin: 0.5em auto 0.5em;
  line-height: 2.5;
  color: $primaryColor;
  border: 1px solid $primaryColor;
  text-align: center;
  overflow: hidden;
  // vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  box-shadow: 0 0 1px transparent;
  position: relative;
  -webkit-transition-property: color;
  transition-property: color;
  -webkit-transition-duration: 0.2s;
  transition-duration: 0.2s;
  &:after {
    content: "";
    width: 12px;
    height: 12px;
    border: 2px solid #fff;
    transform: rotate(45deg);
    position: absolute;
    right: -10px;
    top: 14px;
    border-left: none;
    border-bottom: none;
    transition: 0.3s ease-out;
  }
  &:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: $primaryColor;
    -webkit-transform: scale(0);
    transform: scale(0);
    -webkit-transition-property: transform;
    transition-property: transform;
    -webkit-transition-duration: 0.2s;
    transition-duration: 0.2s;
    -webkit-transition-timing-function: ease-out;
    transition-timing-function: ease-out;
  }
  &:hover,
  &:focus,
  &.active {
    color: white;
    &:before {
      -webkit-transform: scale(1);
      transform: scale(1);
    }
    &:after {
      right: 15px;
    }
  }
}
.form_title {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 3em;
  color: $color-dark;
  padding: 0 5%;
  &::before {
    content: "";
  }
  span {
    margin: 0 1em;
    text-align: center;
  }
  hr {
    width: 10em;
    border-top: 2px solid $color-hr;
  }
}
.instruction_content {
  color: $color-dark;
  &::before {
    content: url(~@/assets/images/img/mp_leaf01.png);
    position: absolute;
  }
  &::after {
    content: url(~@/assets/images/img/mp_leaf02.png);
    position: absolute;
    right: 0;
    bottom: 15em;
    z-index: -1;
  }
}
.instruction_form {
  width: 90%;
  margin: 0 auto;
  line-height: 2.5em;
  margin-bottom: 5em;
  ul {
    list-style: none;
    li {
      text-indent: -1.8em;
    }
  }
  .check_grp {
    color: $color-orange;
    font-weight: 600;
    margin-left: 2em;
  }
  .form_text {
    margin-left: 2.5em;
  }
  .form_submit {
    display: flex;
    justify-content: center;
    margin-top: 3em;
    button {
      font-size: 1.5em;
      width: 10em;
    }
  }
}
.main {
  @media (max-width: 560px) {
    padding-top: 0;
  }
}
.tabItem {
  height: 60px;
}
.active + .tabContent {
  top: 60px;
}

